--- a/style.css
+++ b/style.css
@@ -13,17 +13,40 @@ body {
     margin-top: 5%;
     margin-bottom: 2%;
     background-color: hsl(216, 50%, 16%);
+    border-radius: 20px;
+}
+
+@media screen and (max-width: 992px) {
+    .card {
+      margin-left: 5%;
+      border-radius: 10px;
+      padding: 3.5%;
+    }
+  }
+
+.img-border-white{
+    border: #fff 1px solid;
+    border-radius: 100%;
 }
 
 .main-img{
     width: 100%;
     height: auto;
+    border-radius: 10px;
 }
 .flex img{
     width: auto;
     height: 18px;
-    margin: 5px;
+    margin-right: 12px;
     float: left;
+    /* clear: right; */
+}
+.flex-display img{
+    width: auto;
+    height: 18px;
+    margin: 0px;
+    float: left;
+    /* clear: right; */
 }
 h1{
     font-size: 24px;
@@ -46,8 +69,12 @@ p{
 span{
     color: #fff;
 }
-.flex-display{
-    display: inline-flexbox;
-    flex-direction: row;
-    /* margin: 10px; */
+.main-flex{
+    float: left;
+    width: 100%;
+}
+.flex-size{
+    float: left;
+    width: 50%;
+    /* clear: both; */
 }
